// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/upload/demo/avatar.md correctly 1`] = `
<span
  class="avatar-uploader ant-upload-picture-card-wrapper"
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-picture-card"
  />
</span>
`;

exports[`renders ./components/upload/demo/basic.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/defaultFileList.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class=""
    >
      <span>
        <div
          class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-text"
        >
          <div>
            <div
              class="ant-upload-list-item-info"
            >
              <span>
                <div
                  class="ant-upload-text-icon"
                >
                  <i
                    aria-label="icon: paper-clip"
                    class="anticon anticon-paper-clip"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="paper-clip"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 0 0 174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                      />
                    </svg>
                  </i>
                </div>
                <a
                  class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                  href="http://www.baidu.com/xxx.png"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="xxx.png"
                >
                  xxx.png
                </a>
                <span
                  class="ant-upload-list-item-card-actions "
                >
                  <a
                    title="Download file"
                  >
                    <i
                      aria-label="icon: download"
                      class="anticon anticon-download"
                      tabindex="-1"
                      title="Download file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="download"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </i>
                  </a>
                  <a
                    title="Remove file"
                  >
                    <i
                      aria-label="icon: delete"
                      class="anticon anticon-delete"
                      tabindex="-1"
                      title="Remove file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </i>
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
    <div
      class=""
    >
      <span>
        <div
          class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-text"
        >
          <div>
            <div
              class="ant-upload-list-item-info"
            >
              <span>
                <div
                  class="ant-upload-text-icon"
                >
                  <i
                    aria-label="icon: paper-clip"
                    class="anticon anticon-paper-clip"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="paper-clip"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 0 0 174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                      />
                    </svg>
                  </i>
                </div>
                <a
                  class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                  href="http://www.baidu.com/yyy.png"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="yyy.png"
                >
                  yyy.png
                </a>
                <span
                  class="ant-upload-list-item-card-actions "
                >
                  <a
                    title="Download file"
                  >
                    <i
                      aria-label="icon: download"
                      class="anticon anticon-download"
                      tabindex="-1"
                      title="Download file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="download"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </i>
                  </a>
                  <a
                    title="Remove file"
                  >
                    <i
                      aria-label="icon: delete"
                      class="anticon anticon-delete"
                      tabindex="-1"
                      title="Remove file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </i>
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
    <div
      class=""
    >
      <div
        class="ant-upload-list-item ant-upload-list-item-error ant-upload-list-item-list-type-text"
      >
        <div>
          <div
            class="ant-upload-list-item-info"
          >
            <span>
              <div
                class="ant-upload-text-icon"
              >
                <i
                  aria-label="icon: paper-clip"
                  class="anticon anticon-paper-clip"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="paper-clip"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 0 0 174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                    />
                  </svg>
                </i>
              </div>
              <a
                class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-1"
                href="http://www.baidu.com/zzz.png"
                rel="noopener noreferrer"
                target="_blank"
                title="zzz.png"
              >
                zzz.png
              </a>
              <span
                class="ant-upload-list-item-card-actions "
              >
                <a
                  title="Remove file"
                >
                  <i
                    aria-label="icon: delete"
                    class="anticon anticon-delete"
                    tabindex="-1"
                    title="Remove file"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </i>
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/directory.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/drag.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-drag"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/fileList.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class=""
    >
      <span>
        <div
          class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-text"
        >
          <div>
            <div
              class="ant-upload-list-item-info"
            >
              <span>
                <div
                  class="ant-upload-text-icon"
                >
                  <i
                    aria-label="icon: paper-clip"
                    class="anticon anticon-paper-clip"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="paper-clip"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 0 0 174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
                      />
                    </svg>
                  </i>
                </div>
                <a
                  class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                  href="http://www.baidu.com/xxx.png"
                  rel="noopener noreferrer"
                  target="_blank"
                  title="xxx.png"
                >
                  xxx.png
                </a>
                <span
                  class="ant-upload-list-item-card-actions "
                >
                  <a
                    title="Download file"
                  >
                    <i
                      aria-label="icon: download"
                      class="anticon anticon-download"
                      tabindex="-1"
                      title="Download file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="download"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </i>
                  </a>
                  <a
                    title="Remove file"
                  >
                    <i
                      aria-label="icon: delete"
                      class="anticon anticon-delete"
                      tabindex="-1"
                      title="Remove file"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </i>
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/picture-card.md correctly 1`] = `
<div
  class="clearfix"
>
  <span
    class="ant-upload-picture-card-wrapper"
  >
    <div
      class="ant-upload-list ant-upload-list-picture-card"
    >
      <div
        class="ant-upload-list-picture-card-container"
      >
        <div
          class="ant-upload-list-item ant-upload-list-item-error ant-upload-list-item-list-type-picture-card"
        >
          <div>
            <div
              class="ant-upload-list-item-info"
            >
              <span>
                <div
                  class="ant-upload-list-item-thumbnail ant-upload-list-item-file"
                >
                  <i
                    aria-label="icon: file-unknown"
                    class="anticon anticon-file-unknown"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="file-unknown"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M534 352V136H232v752h560V394H576a42 42 0 0 1-42-42zm-22 424c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm110-228.4c.7 44.9-29.7 84.5-74.3 98.9-5.7 1.8-9.7 7.3-9.7 13.3V672c0 5.5-4.5 10-10 10h-32c-5.5 0-10-4.5-10-10v-32c.2-19.8 15.4-37.3 34.7-40.1C549 596.2 570 574.3 570 549c0-28.1-25.8-51.5-58-51.5s-58 23.4-58 51.6c0 5.2-4.4 9.4-9.8 9.4h-32.4c-5.4 0-9.8-4.1-9.8-9.5 0-57.4 50.1-103.7 111.5-103 59.3.8 107.7 46.1 108.5 101.6z"
                        fill="#e6f7ff"
                      />
                      <path
                        d="M854.6 288.7L639.4 73.4c-6-6-14.2-9.4-22.7-9.4H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V311.3c0-8.5-3.4-16.6-9.4-22.6zM602 137.8L790.2 326H602V137.8zM792 888H232V136h302v216a42 42 0 0 0 42 42h216v494z"
                        fill="#1890ff"
                      />
                      <path
                        d="M480 744a32 32 0 1 0 64 0 32 32 0 1 0-64 0zm-78-195c0 5.4 4.4 9.5 9.8 9.5h32.4c5.4 0 9.8-4.2 9.8-9.4 0-28.2 25.8-51.6 58-51.6s58 23.4 58 51.5c0 25.3-21 47.2-49.3 50.9-19.3 2.8-34.5 20.3-34.7 40.1v32c0 5.5 4.5 10 10 10h32c5.5 0 10-4.5 10-10v-12.2c0-6 4-11.5 9.7-13.3 44.6-14.4 75-54 74.3-98.9-.8-55.5-49.2-100.8-108.5-101.6-61.4-.7-111.5 45.6-111.5 103z"
                        fill="#1890ff"
                      />
                    </svg>
                  </i>
                </div>
                <span
                  class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-1"
                />
              </span>
            </div>
            <span
              class="ant-upload-list-item-actions"
            >
              <a
                rel="noopener noreferrer"
                style="pointer-events:none;opacity:0.5"
                target="_blank"
                title="Preview file"
              >
                <i
                  aria-label="icon: eye-o"
                  class="anticon anticon-eye-o"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="eye"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 0 0 0 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                    />
                  </svg>
                </i>
              </a>
              <i
                aria-label="icon: delete"
                class="anticon anticon-delete"
                tabindex="-1"
                title="Remove file"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="delete"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                  />
                </svg>
              </i>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture-card"
    />
  </span>
</div>
`;

exports[`renders ./components/upload/demo/picture-style.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture"
    />
    <div
      class="ant-upload-list ant-upload-list-picture"
    >
      <div
        class=""
      >
        <span>
          <div
            class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-picture"
          >
            <div>
              <div
                class="ant-upload-list-item-info"
              >
                <span>
                  <a
                    class="ant-upload-list-item-thumbnail"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <img
                      alt="xxx.png"
                      class="ant-upload-list-item-image"
                      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    />
                  </a>
                  <a
                    class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                    title="xxx.png"
                  >
                    xxx.png
                  </a>
                  <span
                    class="ant-upload-list-item-card-actions picture"
                  >
                    <a
                      title="Download file"
                    >
                      <i
                        aria-label="icon: download"
                        class="anticon anticon-download"
                        tabindex="-1"
                        title="Download file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="download"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </a>
                    <a
                      title="Remove file"
                    >
                      <i
                        aria-label="icon: delete"
                        class="anticon anticon-delete"
                        tabindex="-1"
                        title="Remove file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </i>
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div
        class=""
      >
        <span>
          <div
            class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-picture"
          >
            <div>
              <div
                class="ant-upload-list-item-info"
              >
                <span>
                  <a
                    class="ant-upload-list-item-thumbnail"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <img
                      alt="yyy.png"
                      class="ant-upload-list-item-image"
                      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    />
                  </a>
                  <a
                    class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                    title="yyy.png"
                  >
                    yyy.png
                  </a>
                  <span
                    class="ant-upload-list-item-card-actions picture"
                  >
                    <a
                      title="Download file"
                    >
                      <i
                        aria-label="icon: download"
                        class="anticon anticon-download"
                        tabindex="-1"
                        title="Download file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="download"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </a>
                    <a
                      title="Remove file"
                    >
                      <i
                        aria-label="icon: delete"
                        class="anticon anticon-delete"
                        tabindex="-1"
                        title="Remove file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </i>
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </span>
  <br />
  <br />
  <span
    class="upload-list-inline"
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture"
    />
    <div
      class="ant-upload-list ant-upload-list-picture"
    >
      <div
        class=""
      >
        <span>
          <div
            class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-picture"
          >
            <div>
              <div
                class="ant-upload-list-item-info"
              >
                <span>
                  <a
                    class="ant-upload-list-item-thumbnail"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <img
                      alt="xxx.png"
                      class="ant-upload-list-item-image"
                      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    />
                  </a>
                  <a
                    class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                    title="xxx.png"
                  >
                    xxx.png
                  </a>
                  <span
                    class="ant-upload-list-item-card-actions picture"
                  >
                    <a
                      title="Download file"
                    >
                      <i
                        aria-label="icon: download"
                        class="anticon anticon-download"
                        tabindex="-1"
                        title="Download file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="download"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </a>
                    <a
                      title="Remove file"
                    >
                      <i
                        aria-label="icon: delete"
                        class="anticon anticon-delete"
                        tabindex="-1"
                        title="Remove file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </i>
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div
        class=""
      >
        <span>
          <div
            class="ant-upload-list-item ant-upload-list-item-done ant-upload-list-item-list-type-picture"
          >
            <div>
              <div
                class="ant-upload-list-item-info"
              >
                <span>
                  <a
                    class="ant-upload-list-item-thumbnail"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <img
                      alt="yyy.png"
                      class="ant-upload-list-item-image"
                      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    />
                  </a>
                  <a
                    class="ant-upload-list-item-name ant-upload-list-item-name-icon-count-2"
                    href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
                    rel="noopener noreferrer"
                    target="_blank"
                    title="yyy.png"
                  >
                    yyy.png
                  </a>
                  <span
                    class="ant-upload-list-item-card-actions picture"
                  >
                    <a
                      title="Download file"
                    >
                      <i
                        aria-label="icon: download"
                        class="anticon anticon-download"
                        tabindex="-1"
                        title="Download file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="download"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </a>
                    <a
                      title="Remove file"
                    >
                      <i
                        aria-label="icon: delete"
                        class="anticon anticon-delete"
                        tabindex="-1"
                        title="Remove file"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="delete"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                          />
                        </svg>
                      </i>
                    </a>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`renders ./components/upload/demo/preview-file.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture"
    />
    <div
      class="ant-upload-list ant-upload-list-picture"
    />
  </span>
</div>
`;

exports[`renders ./components/upload/demo/transform-file.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-text"
    />
    <div
      class="ant-upload-list ant-upload-list-text"
    />
  </span>
</div>
`;

exports[`renders ./components/upload/demo/upload-manually.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-text"
    />
    <div
      class="ant-upload-list ant-upload-list-text"
    />
  </span>
  <button
    class="ant-btn ant-btn-primary"
    disabled=""
    style="margin-top:16px"
    type="button"
  >
    <span>
      Start Upload
    </span>
  </button>
</div>
`;

exports[`renders ./components/upload/demo/upload-with-aliyun-oss.md correctly 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-4 ant-form-item-label"
    >
      <label
        class=""
        for="photos"
        title="Photos"
      >
        Photos
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class=""
          >
            <div
              class="ant-upload ant-upload-select ant-upload-select-text"
            />
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</form>
`;
